--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Web site created using create-triframe-app"
     />
     <link rel="stylesheet" type="text/css" href="https://cdn.materialdesignicons.com/5.2.45/css/materialdesignicons.min.css" />
-    <title>TriFrame App</title>
+    <title>Rate My InteRview</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ><body style="background-color: #e3f3e8"></body></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
